# DPO-Best-Subset

./: .gitignore  README.md  main.ipynb  pyproject.toml  requirements.txt  subset.csv
llm_assignment_2/: =8.1.7  benchmark.ipynb  data.py  dpo.py  sft.py  utils.py
