[project]
name = "LLM_assignment_2"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = [
    "transformers",
    "torch",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "datasets>=4.3.0",
    "accelerate>=1.11.0",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_assignment_2"]

